# trial-and-error

./: .editorconfig  .gitignore  README.md  WARP.md
.aspire/: settings.json
src/AspireTrial/.aspire/: settings.json
src/AspireTrial/AspireBackendService/: pyproject.toml  telemetry.py
src/AspireTrial/AspireTrial.ApiService/: AspireTrial.ApiService.http
src/AspireTrial/AspireTrial.AppHost/: AppHost.cs  AspireTrial.AppHost.csproj
src/AspireTrial/AspireTrial.AppHost/Properties/: launchSettings.json
src/AspireTrial/AspireTrial.Web/: Program.cs  WeatherApiClient.cs
src/AspireTrial/AspireTrial.Web/Properties/: launchSettings.json
src/dotnet/: AspireTrial.sln
src/dotnet/AspireTrial.ApiService/: AspireTrial.ApiService.csproj  AspireTrial.ApiService.http  Program.cs
src/dotnet/AspireTrial.ApiService/Options/: AzureAIOptions.cs
src/dotnet/AspireTrial.ApiService/Properties/: launchSettings.json
src/dotnet/AspireTrial.ApiService/Services/: AgentCollaboration.cs  BackendServiceClient.cs
src/dotnet/AspireTrial.AppHost/: AppHost.cs  AspireTrial.AppHost.csproj  appsettings.json
src/dotnet/AspireTrial.AppHost/Properties/: launchSettings.json
src/dotnet/AspireTrial.ServiceDefaults/: Extensions.cs
src/dotnet/AspireTrial.Tests/: AspireTrial.Tests.csproj  WebTests.cs
src/dotnet/AspireTrial.Web/: AspireTrial.Web.csproj
src/dotnet/AspireTrial.Web/Components/: App.razor  _Imports.razor
src/dotnet/AspireTrial.Web/Components/Layout/: NavMenu.razor
src/python/: .flake8  pyproject.toml  ruff.toml
src/python/src/aspire_backend_service/: main.py  telemetry.py
src/python/src/aspire_backend_service/agents/: calculator.py  hello.py
src/python/src/aspire_backend_service/routers/: agents.py  request_models.py
src/python/tests/: test_main.py
src/shared/: .gitkeep  api-tests.http
