[project]
name = "aspire-backend-service"
version = "0.1.0"
description = "Python backend service for Aspire trial project"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
